# knowledge-base

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py
app/core/: config.py  exceptions.py  security.py
app/db/: base.py
app/models/: __init__.py  chunk.py  department.py  document.py  evaluation.py  feedback.py  knowledge_base.py  llm_log.py  mixins.py  permission.py  qa.py  role.py  user.py
app/repositories/: __init__.py  base.py  chunks.py  departments.py  documents.py  knowledge_bases.py  permission_repository.py  permissions.py  roles.py  users.py
app/schemas/: __init__.py  common.py  department.py  document.py  feedback.py  knowledge_base.py  permission.py  qa.py  role.py  token.py  user.py
app/services/: __init__.py  auth_service.py  bm25_service.py  chunk_service.py  department_service.py  document_parser.py  document_processing_service.py  document_upload_service.py  embedding_service.py  knowledge_base_service.py  llm_service.py  notification_service.py  permission_crud_service.py  permission_service.py  qa_service.py  rerank_service.py  retrieval_service.py  role_service.py  sso_service.py  user_service.py
app/vectorstores/: __init__.py  base.py  milvus.py
app/workers/: celery_app.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
tests/: conftest.py  test_cors.py  test_health.py  test_project_dependencies.py  test_security.py  test_settings.py
tests/api/: test_auth_api.py  test_qa_api.py  (+4 more)
(+38 files in other folders)
