[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise-grade permission-aware RAG knowledge-base QA platform"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "boto3>=1.35.0",
    "celery>=5.4.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "psycopg[binary]>=3.2.3",
    "pymilvus>=2.5.0",
    "pydantic-settings>=2.5.2",
    "pyjwt>=2.9.0",
    "pymupdf>=1.24.10",
    "python-multipart>=0.0.12",
    "redis>=5.1.1",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]>=0.30.6",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
